[package]
name = "rust64"
version = "0.6.0"
authors = [ "Krzysztof Kondrak <krzysztof.kondrak@gmail.com>" ]

[dependencies]
minifb = "0.19.3"
rand = "0.3.14"
time = "0.1.34"
byteorder = "1.2.2"
enum_primitive = "0.1"
num = "0.1"


[target.'cfg(not(target_os = "redox"))'.dependencies]
sdl2 = "0.34.2"

