[package]
name = "rust64"
version = "0.6.1"
authors = [ "Krzysztof Kondrak <krzysztof.kondrak@gmail.com>" ]

[dependencies]
minifb = { version = "0.28", default-features = false, features = ["x11"] }
rand = "0.10.1"
time = "0.3.49"
byteorder = "1.2.2"
enum_primitive = "0.1"
num = "0.4"


[target.'cfg(not(target_os = "redox"))'.dependencies]
sdl2 = "0.38.0"

[lints.clippy]
upper_case_acronyms="allow"

